# mezcloud.com

./: .env.prod  .gitignore  Dockerfile  Project Goal.md  README.md  docker-compose.yml  manage.py  prometheus.yml  pyproject.toml  quick-cmd.md
.github/workflows/: main.yml
MezProject/: urls.py  wsgi.py
MezProject/settings/: base.py  dev.py
MezProject/templates/: base.html
blog/: models.py
blog/templates/blog/: blog_index_page.html  blog_page.html
home/static/home/css/: styles.css
home/templates/home/: base.html  home_page.html
infrastructure/ansible/: ansible_log.txt  ansible_ssh_key  install_docker.yml  inventory.ini
infrastructure/terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  private_key.pem  terraform.tfvars  variables.tf
staging/: urls.py  views.py
staging/templates/staging/: about.html  achivemets.html  base.html  blog.html  contact.html  home.html  menue.html  services.html
