[tool.poetry]
name = "MezProject"
version = "0.1.0"
description = "mezbauddin.com"
authors = ["Mezb aUddin <mezbauddin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
django = "<4.3,>=4.2"
wagtail = "<5.1,>=5.0"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
